增加运行SHELL脚本。 缺少JAVA_HOME的配置、需要特殊的JDK版本和对应的包。